fix: add media query for footer list alignment on small screens

--- a/src/assets/css/modules/_footer.scss
+++ b/src/assets/css/modules/_footer.scss
@@ -54,6 +54,10 @@
                 padding: 0;
                 margin: 0;
 
+                @media screen and (max-width: 474px) {
+                    align-items: flex-start;
+                }
+
                 &-item {
                     color: colors.$populargames-number-color;
 
